--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-bitcoin-seeder
+bitcoinquark-seeder
 ==============
 
-Bitcoin-seeder is a crawler for the Bitcoin network, which exposes a list
+BitcoinQuark-seeder is a crawler for the BitcoinQuark network, which exposes a list
 of reliable nodes via a built-in DNS server.
 
 Features:
